--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
+#btn{
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+}
 
-/* Your CSS Code here. */
+#btn:hover{
+    color: black;
+    background-color: yellow;
+    border-radius: 30px;
+}
